# TeleSWEBench

./: .gitignore  README.md  pyproject.toml
docs/: evaluation.md  framework-adapters.md  testcases.md
tele_swebench/: __init__.py  artifacts.py  cli.py  config.py  dataset.py  eval_runner.py  full_gt.py  isolation.py  local_runner.py  tests_runner.py  vendor_sync.py
tele_swebench/dataset/: manifest.json
tele_swebench/dataset/bundled/: easy.json  hard.json  medium.json
tele_swebench/engine/: __init__.py  agents.py  experiment_core.py
tele_swebench/eval/: __init__.py  localization_metrics.py  telejudge_ollama.py
tele_swebench/runners/: __init__.py
