[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tele-swebench"
version = "0.1.0"
description = "TeleSWEBench standalone benchmark framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.28",
  "openai>=1.0",
]

[project.scripts]
TeleSWEBench = "tele_swebench.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tele_swebench*"]
